updating node dockerfile

--- a/nodejs_simple/Dockerfile
+++ b/nodejs_simple/Dockerfile
@@ -11,12 +11,16 @@
 # The run command maps the current directory on the host to /usr/src/app
 # When the index.js app is done running it removes the docker container
 
-FROM       node:4.4.2-wheezy
+FROM       node:6.2-wheezy
 MAINTAINER Me
 
 # Expose port #8888 to other apps (use in conjunction with the -p flag)
 EXPOSE 8888
 
 RUN rm /usr/sbin/policy-rc.d
+
+# Create app directory
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 
 CMD ["node", "index.js"]
